--- a/view/ppit-document/document/list.phtml
+++ b/view/ppit-document/document/list.phtml
@@ -61,7 +61,7 @@
 				<span class="glyphicon <?php echo $property['modalities'][$document->type]['glyphicon'] ?>"></span>
 			</button>
 			<?php else : ?>
-			<span class="glyphicon <?php echo $property['modalities'][$document->type]['glyphicon'] ?>" />
+			<span class="glyphicon glyphicon-file" />
 			<?php endif;?>
 		</td>
 	
