--- a/view/ppit-document/public/display-page-new.phtml
+++ b/view/ppit-document/public/display-page-new.phtml
@@ -1,3 +1,7 @@
+
+<div class="container" id="main">
+	<div>&nbsp;</div>
+
 <?php
 if ($context->getLocale() == $document->locale_1 && $document->properties_locale_1) $properties = $document->properties_locale_1;
 elseif ($context->getLocale() == $document->locale_2 && $document->properties_locale_2) $properties = $document->properties_locale_2;
@@ -6,60 +10,57 @@ $title = $properties['title'];
 $this->headTitle($title);
 echo $this->partial('/partials/header');
 ?>
-<section>
-<div>&nbsp;</div>
-
-<!-- Front product 1 -->
-<div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="panel panel-default">
-            <div class="panel-heading front-page">
-                <h1 id="front_product_1_title" style="font-size: 110%; margin-top: 10px;"><?php if (array_key_exists('date',$document->properties)) echo $context->decodeDate($document->properties['date']).': ' ?><?php echo $document->properties['title'] ?></h1>
-            </div>
-            <div class="panel-body">
-       			<div id="front_product_1">
-
-<!-- Display the document -->
-
-<?php for ($i = 0; $i < count($document->parts); $i++) : ?>
-	<?php $documentPart = $document->parts[$i]; ?>
-
-					<div id="document_part_panel_<?php echo $documentPart->id ?>">
+	<section>
+		<div>&nbsp;</div>
 	
-	<?php
-	if ($context->getLocale() == $document->locale_1 && $documentPart->image_locale_1) $image = $documentPart->image_locale_1;
-	elseif ($context->getLocale() == $document->locale_2 && $documentPart->image_locale_2) $image = $documentPart->image_locale_2;
-	else $image = $documentPart->image;
-	?>
-	<?php if ($image) : ?>
-						<div align="center">
-		<?php if (array_key_exists('href', $image)) : ?>
-							<a href="<?php echo $image['href'] ?>" <?php if (array_key_exists('target', $image)) echo 'target="'.$image['target'].'"' ?>>
-		<?php endif;?>
-							<img 
-		<?php foreach ($image as $attr => $value) : ?>
-			<?php if ($attr == 'src') : ?>
-				<?php if (is_array($value)) $value = $value[rand(0, count($value)-1)]?>
-								src="<?php echo $this->basePath($value) ?>"
-			<?php elseif ($attr != 'href' && $attr != 'target') : ?>
-								<?php echo $attr ?>="<?php echo $value ?>"
-			<?php endif;?>
-		<?php endforeach;?>
-							/>
-		<?php if (array_key_exists('href', $image)) : ?>
-							</a>
-		<?php endif;?>
-						</div>
-	<?php endif;?>
+<?php $documentPart = $document->parts[0]; ?>
+	
+<?php
+if ($context->getLocale() == $document->locale_1 && $documentPart->image_locale_1) $image = $documentPart->image_locale_1;
+elseif ($context->getLocale() == $document->locale_2 && $documentPart->image_locale_2) $image = $documentPart->image_locale_2;
+else $image = $documentPart->image;
+?>
+	        <div class="row">
+	            <div class="col-md-8 col-md-offset-2">
+			        <!--Card-->
+			        <div class="card">
 			
+<?php if ($image) : ?>
+			            <!--Card image-->
+			            <div class="view overlay hm-white-slight">
+	<?php if (array_key_exists('href', $image)) : ?>
+							<a href="<?php echo $image['href'] ?>" <?php if (array_key_exists('target', $image)) echo 'target="'.$image['target'].'"' ?>>
+	<?php endif;?>
+							<img 
+	<?php foreach ($image as $attr => $value) : ?>
+		<?php if ($attr == 'src') : ?>
+			<?php if (is_array($value)) $value = $value[rand(0, count($value)-1)]?>
+								src="<?php echo $this->basePath($value) ?>"
+		<?php elseif ($attr != 'href' && $attr != 'target') : ?>
+								<?php echo $attr ?>="<?php echo $value ?>"
+		<?php endif;?>
+	<?php endforeach;?>
+							/>
+	<?php if (array_key_exists('href', $image)) : ?>
+							</a>
+	<?php endif;?>
+			                <a href="#">
+			                    <div class="mask"></div>
+			                </a>
+			            </div>
+			            <!--/.Card image-->
+<?php endif;?>			
+			            <!--Card content-->
+			            <div class="card-block">
+			                <!--Title-->
+			                <h4 class="card-title"><?php echo $document->properties['title'] ?></h4>
+			                <!--Text-->
 	<?php
 	if ($context->getLocale() == $document->locale_1 && $documentPart->content_locale_1) $content = $documentPart->content_locale_1;
 	elseif ($context->getLocale() == $document->locale_2 && $documentPart->content_locale_2) $content = $documentPart->content_locale_2;
 	else $content = $documentPart->content;
 	?>
-						<div><?php echo $documentPart->content ?></div>
-					</div>
-<?php endfor;?>
+							<div><?php echo $documentPart->content ?></div>
 
 <?php if (array_key_exists('actions', $specifications)) : ?>
 	<?php $first=true; foreach ($specifications['actions'] as $actionId => $action) : ?>
@@ -120,36 +121,14 @@ echo $this->partial('/partials/header');
 					<a href="https://twitter.com/ppitfr" target="_blank"><img src="<?php echo $this->basePath('/img/twitter.png') ?>" width="24" alt="P-Pit on Twitter" /></a>
 					<a href="https://plus.google.com/u/1/+Confianceit/posts" target="_blank"><img src="<?php echo $this->basePath('/img/google.png') ?>" width="24" alt="P-Pit on Google" /></a>
 					<a href="mailto:?subject=<?php echo $title ?>&body=<?php echo $this->serverUrl(true) ?>" target="_blank"><img src="<?php echo $this->basePath('/img/email.png') ?>" width="24" alt="Share by email" /></a>
-<!--
-					<script>(function(d, s, id) {
-					  var js, fjs = d.getElementsByTagName(s)[0];
-					  if (d.getElementById(id)) return;
-					  js = d.createElement(s); js.id = id;
-					  js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.6";
-					  fjs.parentNode.insertBefore(js, fjs);
-					}(document, 'script', 'facebook-jssdk'));
-					</script>
-					<div class="fb-share-button" data-href="https://<?php echo $context->getInstance()->fqdn ?><?php echo $this->url('public/displayPage', array('directory' => $directory, 'name' => $name)) ?>" data-layout="box_count" data-mobile-iframe="true"></div>
-	
-					<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-					{lang: 'fr'}
-					</script>	
-					<span class="g-plusone" data-size="tall"></span>
-					
-					<script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: fr_FR</script>
-					<script type="IN/Share" data-url="https://<?php echo $context->getInstance()->fqdn ?><?php echo $this->url('public/displayPage', array('directory' => $directory, 'name' => $name)) ?>" data-counter="top"></script>
-	
-					<a class="twitter-share-button" href="https://twitter.com/share" data-via="ppitfr">Tweet</a><script>// <![CDATA[
-					!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-					// ]]></script> -->
 				</div>	
-             </div>
-        </div>
-	</div>
-
-    <div class="col-md-6 col-md-offset-3" id="form_action"></div>
-</div>
-</section>
+			            </div>
+			            <!--/.Card content-->
+			
+			        </div>
+			        <!--/.Card-->
+	            </div>
+	        </section>
 
 <style>
 .loader {
