--- a/view/layout/public-layout.phtml
+++ b/view/layout/public-layout.phtml
@@ -9,10 +9,17 @@
 <head>
     
     <meta charset="utf-8">
+        <?php echo $this->headTitle()->setSeparator('')->setAutoEscape(false) ?>
+<?php if ($description) : ?>
+		<meta name="description" content="<?php echo $description ?>">
+<?php endif;?>
+<?php if (isset($child->robots)) : ?>
+		<meta name="robots" content="<?php echo $child->robots ?>">
+<?php else : ?>
+		<meta name="robots" content="noindex, nofollow">
+<?php endif;?>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    
-    <title>Material Design Bootstrap</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
